; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xlog.c_CheckPointGuts.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xlog.c_CheckPointGuts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @CheckPointGuts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CheckPointGuts(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = call i32 (...) @CheckPointCLOG()
  %6 = call i32 (...) @CheckPointCommitTs()
  %7 = call i32 (...) @CheckPointSUBTRANS()
  %8 = call i32 (...) @CheckPointMultiXact()
  %9 = call i32 (...) @CheckPointPredicate()
  %10 = call i32 (...) @CheckPointRelationMap()
  %11 = call i32 (...) @CheckPointReplicationSlots()
  %12 = call i32 (...) @CheckPointSnapBuild()
  %13 = call i32 (...) @CheckPointLogicalRewriteHeap()
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @CheckPointBuffers(i32 %14)
  %16 = call i32 (...) @CheckPointReplicationOrigin()
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @CheckPointTwoPhase(i32 %17)
  ret void
}

declare dso_local i32 @CheckPointCLOG(...) #1

declare dso_local i32 @CheckPointCommitTs(...) #1

declare dso_local i32 @CheckPointSUBTRANS(...) #1

declare dso_local i32 @CheckPointMultiXact(...) #1

declare dso_local i32 @CheckPointPredicate(...) #1

declare dso_local i32 @CheckPointRelationMap(...) #1

declare dso_local i32 @CheckPointReplicationSlots(...) #1

declare dso_local i32 @CheckPointSnapBuild(...) #1

declare dso_local i32 @CheckPointLogicalRewriteHeap(...) #1

declare dso_local i32 @CheckPointBuffers(i32) #1

declare dso_local i32 @CheckPointReplicationOrigin(...) #1

declare dso_local i32 @CheckPointTwoPhase(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
